@@ -1,3 +1,8 @@
+*** 20001029_1 by lusky
+fix for mIRC NAT+spoofedI DCC send problem (userhost now returns sockhost
+for acptr==sptr).
+
+
 *** 20001025_1 by lusky
 fix path in viconf (ab)
 
